--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     //Database
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.h2database:h2'
+    //Validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     //Spring Security
     //implementation 'org.springframework.boot:spring-boot-starter-security'
     //implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
