--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,8 @@ dependencies {
     //Validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     //Spring Security
-    //implementation 'org.springframework.boot:spring-boot-starter-security'
-    //implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 
 
 
